--- a/headers.security.Api/Frontend/index.html
+++ b/headers.security.Api/Frontend/index.html
@@ -11,6 +11,9 @@
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Security Headers by Omegapoint" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Scan your webapp and improve your security posture." />
     <title>HTTP header evaluator</title>
   </head>
   <body>
