--- a/headers.security.Api/Frontend/index.html
+++ b/headers.security.Api/Frontend/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/op-symbol-black.svg" color="#286166">
+    <link rel="stylesheet" href="/index.css">
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
